cabal-version: 1.12

name:           lh-containers
version:        0.1.0.0
description:    This toy package demonstrates the use of LH as a plugin.
homepage:
bug-reports:
author:         X.Y
maintainer:     example@example.com
copyright:      2020 X.Y
license:        MIT 
license-file:   LICENSE
build-type:     Simple

library
  exposed-modules:
      Lists.UniqueList
      Lists.IncrList
  hs-source-dirs:
      src
  build-depends:
      liquid-base,
      liquidhaskell >= 0.8.10,
      liquid-containers >= 0.6.2.1,
      liquid-prelude >= 0.8.10.2
      -- containers >= 0.6.2.1
  default-language: Haskell2010
  ghc-options: -fplugin=LiquidHaskell


