[package]
name = "preprocess"
version = "0.1.0"
authors = ["Xueying Qin <qinxy1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.0"
indicatif = "0.16.2"
rand = "0.8.5"
im = "10.2.0"
proptest = "1.0.0"

[dev-dependencies]
criterion = "0.3.5"

[[example]]
name = "process_file"

[[bench]]
name = "criterion_benchmark"
harness = false