[package]
name = "rust_containers"
version = "0.1.0"
authors = ["Xueying Qin <qinxy1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "criterion_benchmark"
harness = false